Tue Oct 31 17:57:52 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (_readlink): Return ENOENT when file does not exist.

Tue Oct 31 23:35:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.h (fhandler_dev_raw): Add method `fixup_after_exec'.

Tue Oct 31 22:39:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.h (fhandler_dev_raw): Add definition for method
	`fixup_after_fork'.
	* fhandler_raw.cc (fhandler_dev_raw::fhandler_dev_raw): Add
	`set_need_fixup_after_fork' call.
	(fhandler_dev_raw::~fhandler_dev_raw): Revert to user space
	allocation.
	(fhandler_dev_raw::open): Ditto.
	(fhandler_dev_raw::dup): Ditto. Reset buffer pointer.
	(fhandler_dev_raw::fixup_after_fork): New function.
	* fhandler_tape.cc (fhandler_dev_tape::open): Revert to user space
	memory allocation.
	(fhandler_dev_tape::ioctl): Ditto. Change behaviour on MTSETBLK when
	new size is 1.

Tue Oct 31 20:56:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler_tape.cc (fhandler_dev_tape::open): Fix memory allocation.
	Use Cygwin heap instead of user heap.
	(fhandler_dev_tape::ioctl): Ditto.

Tue Oct 31 12:00:06 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (enum_init): Don't suffer silently if we can't load the
	process enumerators.

Mon Oct 30 16:54:26 2000  Christopher Faylor <cgf@cygnus.com>

	* signal.cc (kill_pgrp): Revert 25-Oct change.
	(kill_worker): Ditto.

Sun Oct 29 20:52:31 2000  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump DLL minor version number to 6.

Sat Oct 28 01:39:53 2000  Christopher Faylor <cgf@cygnus.com>

	* configure.in: Eliminate subdir stuff.
	* configure: Regenerate.
	* include/getopt.h (option): Make name field 'const'.

Fri Oct 27 20:51:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: New file keeping all autoload stuff.
	* Makefile.in: Add autoload.o to dependencies.
	* dcrt0.cc: Move all autoload stuff to autoload.cc.
	* fhandler_mem.cc: Ditto.
	* net.cc: Ditto.
	* uinfo.cc: Ditto.
